--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>Contact - colah's blog</title>
+        <title>Contact - Alejandro Avella's blog</title>
         
         <link rel="stylesheet" href="./fonts/Serif/cmun-serif.css" />
         <link rel="stylesheet" href="./fonts/Serif-Slanted/cmun-serif-slanted.css" />
@@ -86,7 +86,7 @@
                         <div class="col-md-8">
                             <h1>Contact</h1>
                             <div id="body">
-                                <p>You can email me at christopherolah.co@gmail.com</p>
+                                <p>You can email me at alejandroavella77 at yahoo.com</p>
                             </div>
                         </div>
                         <div class="col-md-4" id="toc-wrapper">
