--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand active" href="./" id="home">colah's blog</a>
+                        <a class="navbar-brand active" href="./" id="home">Alejandro Avella's blog</a>
                     </div>
                     <!--normal header-->
                     <div class="navbar-collapse collapse">
