--- a/about.html
+++ b/about.html
@@ -105,9 +105,9 @@
             <div class="profile">
                 <h2 >Alejandro Avella</h2>
 
-                <p>Love to learn, just for fun! What matters is what you contribute. The extraordinary everyday... the beautiful mundane.</p>
+                <p>Machine Learning enthusiast. Engineer by Training and Tester expert in Python.</p>
                 <p>My primary interests lie at the intersection of machine learning and neuroscience.</p>
-                <p>AI curious and interested in applying AI for testing</p>
+                <p>AI curious and interested in applying AI for testing and neuroscience.</p>
                 
                 <p style="text-align:center;"><a href="https://github.com/aavella77/">Github</a> - <a href="https://twitter.com/aavella77">Twitter</a> - <a href="https://www.linkedin.com/in/alejandro-avella-26a0364/">LinkedIn</a></p>
 
