chataqua Boulder 2009 - About

--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
 
     </head>
 
-    <body style="background: #ffffff url('images/niagara-falls.jpg') no-repeat center center fixed;-moz-background-size:cover;-webkit-background-size:cover;-o-background-size:cover;background-size:cover; min-width: 394px;">
+    <body style="background: #ffffff url('images/--ale-chataqua-dec-2009-1.jpg') no-repeat center center fixed;-moz-background-size:cover;-webkit-background-size:cover;-o-background-size:cover;background-size:cover; min-width: 394px;">
         <div id="wrap">
             <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
                 <div class="container">
