--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
                 <p>My primary interests lie at the intersection of machine learning and neuroscience.</p>
                 <p>AI curious and interested in applying AI for testing and neuroscience.</p>
                 
-                <p style="text-align:center;"><a href="https://github.com/aavella77/">Github</a> - <a href="https://twitter.com/aavella77">Twitter</a> - <a href="https://www.linkedin.com/in/alejandro-avella-26a0364/">LinkedIn</a> - <a href="AlejandroAvellaResume2019.pdf">CV</a></p>
+                <p style="text-align:center;"><a href="https://github.com/aavella77/">Github</a> - <a href="https://twitter.com/aavella77">Twitter</a> - <a href="https://www.linkedin.com/in/alejandro-avella-26a0364/">LinkedIn</a> - <a href="https://global.su.org/profile/56790">Singularity</a> - <a href="AlejandroAvellaResume2019.pdf">CV</a></p>
 
 
             </div>
