--- a/about.html
+++ b/about.html
@@ -106,10 +106,9 @@
                 <h2 >Alejandro Avella</h2>
 
                 <p>Machine Learning enthusiast. Engineer by Training and Tester expert in Python.</p>
-                <p>AI curious and interested in applying AI for testing.</p>
+                <p>AI curious and interested in applying AI for testing and neuroscience.</p>
                 
-                <p style="text-align:center;"><a href="https://github.com/aavella77/">Github</a> - <a href="https://twitter.com/aavella77">Twitter</a> - <a href="https://www.linkedin.com/in/alejandro-avella-26a0364/">LinkedIn</a> - <a href="https://global.su.org/profile/56790">Singularity</a> - <a href="https://www.facebook.com/alejandro.avella.315">Facebook</a> - <a href="Alejandro_Avella_Resume_2020_short.pdf">CV</a></p>
-
+     
 
             </div>
 
