--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>Home - Alejandro Avella's blog</title>
+        <title>Just another blog</title>
 
         <link rel="stylesheet" href="./fonts/Serif/cmun-serif.css" />
         <link rel="stylesheet" href="./fonts/Serif-Slanted/cmun-serif-slanted.css" />
