--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand active" href="./" id="home">Alejandro Avella's blog</a>
+                        <a class="navbar-brand active" href="./" id="home">Just another blog</a>
                     </div>
                     <!--normal header-->
                     <div class="navbar-collapse collapse">
