--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
           
 
             <div class="profile">
-                <h2 >Alejandro Avella</h2>
+                <h2 >Citizen of the world</h2>
 
                 <p>Machine Learning enthusiast. Engineer by Training and Tester expert in Python.</p>
                 <p>AI curious and interested in applying AI for testing and neuroscience.</p>
