--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
                         <div class="col-md-8">
                             <h1>Contact</h1>
                             <div id="body">
-                                <p>You can email me at robertico.gonzalez77 at gmail.com</p>
+                                <p>You can email me at aeavella77 at gmail.com</p>
                             </div>
                         </div>
                         <div class="col-md-4" id="toc-wrapper">
