About with short bio

--- a/about.html
+++ b/about.html
@@ -105,10 +105,25 @@
             <div class="profile">
                 <h2 >Citizen of the world</h2>
 
-                <p>Machine Learning enthusiast. Engineer by Training and Tester expert in Python.</p>
-                <p>AI curious and interested in applying AI for testing and neuroscience.</p>
+                I was born and raised in Caracas, Venezuela. I obtained a BS in Electronics Engineering from Simón Bolívar University in Venezuela in 1994. In 1996, I came to the US to obtain an MS in Telecommunications from the University of Colorado at Boulder financed by a merit grant from the Venezuelan government (Fundación Gran Mariscal de Ayacucho). I completed an online certificate in computer networking which required me to pass 4 graduate-level courses from Stanford University in 2006 while working full time and raising a family. I have one issued patent for the transmission of a multi-line hunt group with VOIP gateways awarded in 2008.
+
+                <p></p>
+
+                My wife and I started raising two kids while living in Boulder, Colorado where we lived for about 16 years. In 2012, we moved to the Bay Area after finding a very interesting job in a video streaming group at Cisco and escaping from the Rockies’s snow. Now, my daughter finished a degree in Public Relations from San Jose State University and is working in Santa Clara County. My son graduated from EECS at the University of Colorado Berkeley and he is working at Dell.
+
+<p></p>
+
+                My job experience is primarily a test engineer with a concentration in automation. I have worked on e-commerce, video streaming, virtualization and voice over IP technologies for about 20 years as a test engineer. I have expertise with Python programming. I am curious, creative, thorough, organized and love to learn on my own. I am exploring what types of roles I would be passionate about. I feel passionate about Life Sciences and Artificial Intelligence and I am taking some online courses to improve my knowledge from MIT’s edX. I am also exploring my passion for teaching by trying to create my first online course.
+
+<p></p>
+
+                In my spare time, I like to explore new ideas on my own and experiment with open source code. Also, I like to hike, run, bike and swim and play golf. I enjoy contact with nature and I enjoy listening to music observing the effect that it has on my mood.
+
+<p></p>
+
+                “There are no accidents, the theory of everything, there is not a single coincidence in this world, the random nature of nature is not random at all. I still haven't found what I am looking for. Remain curious. Maybe one day we will figure it out. Shine your light.” - Alejandro Avella, January 2016
                 
-     
+<p></p>
 
             </div>
 
