--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,12 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-131458129-1');
+
+
 </script>
+
+
+
 
 
 
@@ -76,34 +81,25 @@
                     </div><!--/.nav-collapse -->
                 </div>
             </nav>
+        </div>
 
-            
-            <div id="content">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-8">
-                            <h1>Contact</h1>
-                            <div id="body">
-                                <p>You can email me at aeavella77 at gmail.com</p>
-                            </div>
-                        </div>
-                        <div class="col-md-4" id="toc-wrapper">
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <p style="text-align: center;"><h1>Contact me</h1></p>
+
+
+                                <a href="https://www.linkedin.com/in/alejandro-avella-26a0364/" target="blank">
+                                    <img style="width: 100px; height: 100px;" src="images/linkedin.svg" alt="Alejandro Avella | LinkedIn" />
+                                </a>
+                                <a href="https://x.com/AAvella32010" target="blank">
+                                    <img align="center" style="width: 100px; height: 100px;" src="images/twitter.svg" alt="Alejandro Avella | Twitter" />
+                                </a>
+                                <a href="mailto:aeavella77@gmail.com">
+                                    <img align="center" style="width: 100px; height: 100px;" src="images/mail.svg" alt="Alejandro Avella | Mail" />
+                                </a>
+                            </p>
+
+
         
 
-            <div id="footer">
-                <div class="container">
-                    Built by <a href="https://github.com/oinkina">Oinkina</a> with
-                    <a href="http://jaspervdj.be/hakyll">Hakyll</a> 
-                    using <a href="http://getbootstrap.com/">Bootstrap</a>, 
-                    <a href="http://www.mathjax.org/">MathJax</a>, and
-                    <a href="http://disqus.com/">Disqus</a>.
-                </div>
-            </div>
-        </div>
 
     <!-- jQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
